# fast_mm_benchmarks

./: CMakeLists.txt
examples/: CMakeLists.txt  benchmark_read.cpp  benchmark_write.cpp  write_verify.cpp
